Verif/Test/Invalide/test_erreur_3.50-2.deca
// Description:
//    Programme soulevant l'erreur (3.50)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Entier, flottant ou chaine de caractère attendu (règle 3.50)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 12/01/2012


{
   print(null);
}